Resolved overflow scroll issue on high component height G-006

--- a/src/app/components/incident/incident.component.scss
+++ b/src/app/components/incident/incident.component.scss
@@ -26,7 +26,7 @@
 
   &.high-incident {
     .box-header {
-      background-color: red;
+      background-color: #e20000;
     }
   }
 
